# graphicool

./: Cargo.toml
res/: cube_test.glb  test_model.glb  test_model2.glb  test_model3.glb
shaders/: billboard.wgsl  billboard_srgb.wgsl  default.wgsl  default_srgb.wgsl  example.wgsl
src/: engine.rs  lib.rs  main.rs
src/engine/: resources.rs  window_state.rs
src/math/: convert.rs
