[package]
name = "graphicool"
version = "0.1.0"
edition = "2021"

[dependencies]
# graphical stuff
wgpu = "24.0.1"
winit = { version = "0.30.8" }
pollster = "0.4"
env_logger = "0.11.6"
bytemuck = "1.21.0"
image = "0.25.5"

# math stuff
vecmath = "1.0.0"

[dependencies.gltf]
version = "1.4.1"
features = ["extras", "names"]